# client-go

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-client-go  bazel-out  bazel-testlogs  repositories.bzl
deprecated/: BUILD.bazel
deprecated/fake/: BUILD.bazel
deprecated/scheme/: BUILD.bazel
deprecated/typed/admissionregistration/v1/: BUILD.bazel
deprecated/typed/admissionregistration/v1beta1/: BUILD.bazel
deprecated/typed/apps/v1/: BUILD.bazel
deprecated/typed/apps/v1beta1/: BUILD.bazel
deprecated/typed/apps/v1beta2/: BUILD.bazel
deprecated/typed/auditregistration/v1alpha1/: BUILD.bazel
deprecated/typed/authentication/v1/: BUILD.bazel
deprecated/typed/authentication/v1beta1/: BUILD.bazel
deprecated/typed/authorization/v1/: BUILD.bazel
deprecated/typed/authorization/v1beta1/: BUILD.bazel
deprecated/typed/autoscaling/v1/: BUILD.bazel
deprecated/typed/autoscaling/v2beta1/: BUILD.bazel
deprecated/typed/autoscaling/v2beta2/: BUILD.bazel
deprecated/typed/batch/v1/: BUILD.bazel
deprecated/typed/batch/v1beta1/: BUILD.bazel
deprecated/typed/batch/v2alpha1/: BUILD.bazel
deprecated/typed/certificates/v1beta1/: BUILD.bazel
deprecated/typed/coordination/v1/: BUILD.bazel
deprecated/typed/coordination/v1beta1/: BUILD.bazel
deprecated/typed/core/v1/: BUILD.bazel
deprecated/typed/discovery/v1alpha1/: BUILD.bazel
deprecated/typed/discovery/v1beta1/: BUILD.bazel
deprecated/typed/events/v1beta1/: BUILD.bazel
deprecated/typed/extensions/v1beta1/: BUILD.bazel
deprecated/typed/flowcontrol/v1alpha1/: BUILD.bazel
deprecated/typed/networking/v1/: BUILD.bazel
deprecated/typed/networking/v1beta1/: BUILD.bazel
deprecated/typed/node/v1alpha1/: BUILD.bazel
deprecated/typed/node/v1beta1/: BUILD.bazel
deprecated/typed/policy/v1beta1/: BUILD.bazel
deprecated/typed/rbac/v1/: BUILD.bazel
deprecated/typed/rbac/v1alpha1/: BUILD.bazel
deprecated/typed/rbac/v1beta1/: BUILD.bazel
deprecated/typed/scheduling/v1/: BUILD.bazel
deprecated/typed/scheduling/v1alpha1/: BUILD.bazel
deprecated/typed/scheduling/v1beta1/: BUILD.bazel
deprecated/typed/settings/v1alpha1/: BUILD.bazel
deprecated/typed/storage/v1/: BUILD.bazel
deprecated/typed/storage/v1alpha1/: BUILD.bazel
deprecated/typed/storage/v1beta1/: BUILD.bazel
discovery/: BUILD.bazel
discovery/cached/: BUILD.bazel
discovery/cached/disk/: BUILD.bazel
discovery/cached/memory/: BUILD.bazel
discovery/fake/: BUILD.bazel
dynamic/: BUILD.bazel
dynamic/dynamicinformer/: BUILD.bazel
examples/create-update-delete-deployment/: BUILD.bazel
examples/dynamic-create-update-delete-deployment/: BUILD.bazel
examples/fake-client/: BUILD.bazel
examples/in-cluster-client-configuration/: BUILD.bazel
examples/leader-election/: BUILD.bazel
examples/out-of-cluster-client-configuration/: BUILD.bazel
examples/workqueue/: BUILD.bazel
informers/: BUILD.bazel
informers/admissionregistration/: BUILD.bazel
informers/admissionregistration/v1/: BUILD.bazel
informers/admissionregistration/v1beta1/: BUILD.bazel
informers/apps/: BUILD.bazel
informers/apps/v1/: BUILD.bazel
informers/apps/v1beta1/: BUILD.bazel
informers/apps/v1beta2/: BUILD.bazel
informers/auditregistration/: BUILD.bazel
informers/auditregistration/v1alpha1/: BUILD.bazel
informers/autoscaling/: BUILD.bazel
informers/autoscaling/v1/: BUILD.bazel
informers/autoscaling/v2beta1/: BUILD.bazel
informers/autoscaling/v2beta2/: BUILD.bazel
informers/batch/: BUILD.bazel
informers/batch/v1/: BUILD.bazel
informers/batch/v1beta1/: BUILD.bazel
informers/batch/v2alpha1/: BUILD.bazel
informers/certificates/: BUILD.bazel
informers/certificates/v1beta1/: BUILD.bazel
informers/coordination/: BUILD.bazel
informers/coordination/v1/: BUILD.bazel
informers/coordination/v1beta1/: BUILD.bazel
informers/core/: BUILD.bazel
informers/core/v1/: BUILD.bazel
informers/discovery/: BUILD.bazel
informers/discovery/v1alpha1/: BUILD.bazel
informers/discovery/v1beta1/: BUILD.bazel
informers/events/: BUILD.bazel
informers/events/v1beta1/: BUILD.bazel
informers/extensions/: BUILD.bazel
informers/extensions/v1beta1/: BUILD.bazel
informers/flowcontrol/: BUILD.bazel
informers/flowcontrol/v1alpha1/: BUILD.bazel
informers/internalinterfaces/: BUILD.bazel
informers/networking/: BUILD.bazel
informers/networking/v1/: BUILD.bazel
informers/networking/v1beta1/: BUILD.bazel
informers/node/: BUILD.bazel
informers/node/v1alpha1/: BUILD.bazel
informers/node/v1beta1/: BUILD.bazel
informers/policy/: BUILD.bazel
informers/policy/v1beta1/: BUILD.bazel
informers/rbac/: BUILD.bazel
informers/rbac/v1/: BUILD.bazel
informers/rbac/v1alpha1/: BUILD.bazel
informers/rbac/v1beta1/: BUILD.bazel
informers/scheduling/: BUILD.bazel
informers/scheduling/v1/: BUILD.bazel
informers/scheduling/v1alpha1/: BUILD.bazel
informers/scheduling/v1beta1/: BUILD.bazel
informers/settings/: BUILD.bazel
informers/settings/v1alpha1/: BUILD.bazel
informers/storage/: BUILD.bazel
informers/storage/v1/: BUILD.bazel
informers/storage/v1alpha1/: BUILD.bazel
informers/storage/v1beta1/: BUILD.bazel
kubernetes/: BUILD.bazel
kubernetes/fake/: BUILD.bazel
kubernetes/scheme/: BUILD.bazel
kubernetes/typed/admissionregistration/v1/: BUILD.bazel
kubernetes/typed/admissionregistration/v1beta1/: BUILD.bazel
kubernetes/typed/apps/v1/: BUILD.bazel
kubernetes_test/: BUILD.bazel
metadata/: BUILD.bazel
metadata/fake/: BUILD.bazel
metadata/metadatainformer/: BUILD.bazel
metadata/metadatalister/: BUILD.bazel
rest/: BUILD.bazel
rest/fake/: BUILD.bazel
rest/watch/: BUILD.bazel
restmapper/: BUILD.bazel
scale/: BUILD.bazel
scale/fake/: BUILD.bazel
scale/scheme/: BUILD.bazel
scale/scheme/appsint/: BUILD.bazel
scale/scheme/appsv1beta1/: BUILD.bazel
scale/scheme/appsv1beta2/: BUILD.bazel
scale/scheme/autoscalingv1/: BUILD.bazel
scale/scheme/extensionsint/: BUILD.bazel
scale/scheme/extensionsv1beta1/: BUILD.bazel
testing/: BUILD.bazel
transport/: BUILD.bazel
transport/spdy/: BUILD.bazel
(+197 files in other folders)
