load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset.go",
        "doc.go",
        "import.go",
    ],
    importpath = "k8s.io/client-go/deprecated",
    visibility = ["//visibility:public"],
    deps = [
        "//deprecated/typed/admissionregistration/v1:go_default_library",
        "//deprecated/typed/admissionregistration/v1beta1:go_default_library",
        "//deprecated/typed/apps/v1:go_default_library",
        "//deprecated/typed/apps/v1beta1:go_default_library",
        "//deprecated/typed/apps/v1beta2:go_default_library",
        "//deprecated/typed/auditregistration/v1alpha1:go_default_library",
        "//deprecated/typed/authentication/v1:go_default_library",
        "//deprecated/typed/authentication/v1beta1:go_default_library",
        "//deprecated/typed/authorization/v1:go_default_library",
        "//deprecated/typed/authorization/v1beta1:go_default_library",
        "//deprecated/typed/autoscaling/v1:go_default_library",
        "//deprecated/typed/autoscaling/v2beta1:go_default_library",
        "//deprecated/typed/autoscaling/v2beta2:go_default_library",
        "//deprecated/typed/batch/v1:go_default_library",
        "//deprecated/typed/batch/v1beta1:go_default_library",
        "//deprecated/typed/batch/v2alpha1:go_default_library",
        "//deprecated/typed/certificates/v1beta1:go_default_library",
        "//deprecated/typed/coordination/v1:go_default_library",
        "//deprecated/typed/coordination/v1beta1:go_default_library",
        "//deprecated/typed/core/v1:go_default_library",
        "//deprecated/typed/discovery/v1alpha1:go_default_library",
        "//deprecated/typed/discovery/v1beta1:go_default_library",
        "//deprecated/typed/events/v1beta1:go_default_library",
        "//deprecated/typed/extensions/v1beta1:go_default_library",
        "//deprecated/typed/flowcontrol/v1alpha1:go_default_library",
        "//deprecated/typed/networking/v1:go_default_library",
        "//deprecated/typed/networking/v1beta1:go_default_library",
        "//deprecated/typed/node/v1alpha1:go_default_library",
        "//deprecated/typed/node/v1beta1:go_default_library",
        "//deprecated/typed/policy/v1beta1:go_default_library",
        "//deprecated/typed/rbac/v1:go_default_library",
        "//deprecated/typed/rbac/v1alpha1:go_default_library",
        "//deprecated/typed/rbac/v1beta1:go_default_library",
        "//deprecated/typed/scheduling/v1:go_default_library",
        "//deprecated/typed/scheduling/v1alpha1:go_default_library",
        "//deprecated/typed/scheduling/v1beta1:go_default_library",
        "//deprecated/typed/settings/v1alpha1:go_default_library",
        "//deprecated/typed/storage/v1:go_default_library",
        "//deprecated/typed/storage/v1alpha1:go_default_library",
        "//deprecated/typed/storage/v1beta1:go_default_library",
        "//discovery:go_default_library",
        "//rest:go_default_library",
        "//util/flowcontrol:go_default_library",
    ],
)
