load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "factory.go",
        "generic.go",
    ],
    importpath = "k8s.io/client-go/informers",
    visibility = ["//visibility:public"],
    deps = [
        "//informers/admissionregistration:go_default_library",
        "//informers/apps:go_default_library",
        "//informers/auditregistration:go_default_library",
        "//informers/autoscaling:go_default_library",
        "//informers/batch:go_default_library",
        "//informers/certificates:go_default_library",
        "//informers/coordination:go_default_library",
        "//informers/core:go_default_library",
        "//informers/discovery:go_default_library",
        "//informers/events:go_default_library",
        "//informers/extensions:go_default_library",
        "//informers/flowcontrol:go_default_library",
        "//informers/internalinterfaces:go_default_library",
        "//informers/networking:go_default_library",
        "//informers/node:go_default_library",
        "//informers/policy:go_default_library",
        "//informers/rbac:go_default_library",
        "//informers/scheduling:go_default_library",
        "//informers/settings:go_default_library",
        "//informers/storage:go_default_library",
        "//kubernetes:go_default_library",
        "//tools/cache:go_default_library",
        "@io_k8s_api//admissionregistration/v1:go_default_library",
        "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//autoscaling/v1:go_default_library",
        "@io_k8s_api//autoscaling/v2beta1:go_default_library",
        "@io_k8s_api//autoscaling/v2beta2:go_default_library",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//batch/v1beta1:go_default_library",
        "@io_k8s_api//batch/v2alpha1:go_default_library",
        "@io_k8s_api//certificates/v1beta1:go_default_library",
        "@io_k8s_api//coordination/v1:go_default_library",
        "@io_k8s_api//coordination/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1alpha1:go_default_library",
        "@io_k8s_api//discovery/v1beta1:go_default_library",
        "@io_k8s_api//events/v1beta1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_api//flowcontrol/v1alpha1:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_api//node/v1alpha1:go_default_library",
        "@io_k8s_api//node/v1beta1:go_default_library",
        "@io_k8s_api//policy/v1beta1:go_default_library",
        "@io_k8s_api//rbac/v1:go_default_library",
        "@io_k8s_api//rbac/v1alpha1:go_default_library",
        "@io_k8s_api//rbac/v1beta1:go_default_library",
        "@io_k8s_api//scheduling/v1:go_default_library",
        "@io_k8s_api//scheduling/v1alpha1:go_default_library",
        "@io_k8s_api//scheduling/v1beta1:go_default_library",
        "@io_k8s_api//settings/v1alpha1:go_default_library",
        "@io_k8s_api//storage/v1:go_default_library",
        "@io_k8s_api//storage/v1alpha1:go_default_library",
        "@io_k8s_api//storage/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)
