load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset.go",
        "doc.go",
        "import.go",
    ],
    importpath = "k8s.io/client-go/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery:go_default_library",
        "//kubernetes/typed/admissionregistration/v1:go_default_library",
        "//kubernetes/typed/admissionregistration/v1beta1:go_default_library",
        "//kubernetes/typed/apps/v1:go_default_library",
        "//kubernetes/typed/apps/v1beta1:go_default_library",
        "//kubernetes/typed/apps/v1beta2:go_default_library",
        "//kubernetes/typed/auditregistration/v1alpha1:go_default_library",
        "//kubernetes/typed/authentication/v1:go_default_library",
        "//kubernetes/typed/authentication/v1beta1:go_default_library",
        "//kubernetes/typed/authorization/v1:go_default_library",
        "//kubernetes/typed/authorization/v1beta1:go_default_library",
        "//kubernetes/typed/autoscaling/v1:go_default_library",
        "//kubernetes/typed/autoscaling/v2beta1:go_default_library",
        "//kubernetes/typed/autoscaling/v2beta2:go_default_library",
        "//kubernetes/typed/batch/v1:go_default_library",
        "//kubernetes/typed/batch/v1beta1:go_default_library",
        "//kubernetes/typed/batch/v2alpha1:go_default_library",
        "//kubernetes/typed/certificates/v1beta1:go_default_library",
        "//kubernetes/typed/coordination/v1:go_default_library",
        "//kubernetes/typed/coordination/v1beta1:go_default_library",
        "//kubernetes/typed/core/v1:go_default_library",
        "//kubernetes/typed/discovery/v1alpha1:go_default_library",
        "//kubernetes/typed/discovery/v1beta1:go_default_library",
        "//kubernetes/typed/events/v1beta1:go_default_library",
        "//kubernetes/typed/extensions/v1beta1:go_default_library",
        "//kubernetes/typed/flowcontrol/v1alpha1:go_default_library",
        "//kubernetes/typed/networking/v1:go_default_library",
        "//kubernetes/typed/networking/v1beta1:go_default_library",
        "//kubernetes/typed/node/v1alpha1:go_default_library",
        "//kubernetes/typed/node/v1beta1:go_default_library",
        "//kubernetes/typed/policy/v1beta1:go_default_library",
        "//kubernetes/typed/rbac/v1:go_default_library",
        "//kubernetes/typed/rbac/v1alpha1:go_default_library",
        "//kubernetes/typed/rbac/v1beta1:go_default_library",
        "//kubernetes/typed/scheduling/v1:go_default_library",
        "//kubernetes/typed/scheduling/v1alpha1:go_default_library",
        "//kubernetes/typed/scheduling/v1beta1:go_default_library",
        "//kubernetes/typed/settings/v1alpha1:go_default_library",
        "//kubernetes/typed/storage/v1:go_default_library",
        "//kubernetes/typed/storage/v1alpha1:go_default_library",
        "//kubernetes/typed/storage/v1beta1:go_default_library",
        "//rest:go_default_library",
        "//util/flowcontrol:go_default_library",
    ],
)
