load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["timeout_test.go"],
    deps = [
        "//kubernetes:go_default_library",
        "//kubernetes/scheme:go_default_library",
        "//rest:go_default_library",
        "//rest/fake:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
    ],
)
