load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "category_expansion.go",
        "discovery.go",
        "shortcut.go",
    ],
    importpath = "k8s.io/client-go/restmapper",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "category_expansion_test.go",
        "discovery_test.go",
        "shortcut_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//discovery:go_default_library",
        "//rest:go_default_library",
        "//rest/fake:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_googleapis_gnostic//OpenAPIv2:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/version:go_default_library",
    ],
)
