load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "doc.go",
        "interfaces.go",
        "util.go",
    ],
    importpath = "k8s.io/client-go/scale",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery:go_default_library",
        "//dynamic:go_default_library",
        "//rest:go_default_library",
        "//scale/scheme:go_default_library",
        "//scale/scheme/appsint:go_default_library",
        "//scale/scheme/appsv1beta1:go_default_library",
        "//scale/scheme/appsv1beta2:go_default_library",
        "//scale/scheme/autoscalingv1:go_default_library",
        "//scale/scheme/extensionsint:go_default_library",
        "//scale/scheme/extensionsv1beta1:go_default_library",
        "@io_k8s_api//autoscaling/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "roundtrip_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//discovery/fake:go_default_library",
        "//dynamic:go_default_library",
        "//rest/fake:go_default_library",
        "//restmapper:go_default_library",
        "//testing:go_default_library",
        "@com_github_evanphx_json_patch//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//autoscaling/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/apitesting/roundtrip:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
    ],
)
