load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset_generated.go",
        "doc.go",
        "register.go",
    ],
    importpath = "k8s.io/client-go/deprecated/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//deprecated:go_default_library",
        "//deprecated/typed/admissionregistration/v1:go_default_library",
        "//deprecated/typed/admissionregistration/v1/fake:go_default_library",
        "//deprecated/typed/admissionregistration/v1beta1:go_default_library",
        "//deprecated/typed/admissionregistration/v1beta1/fake:go_default_library",
        "//deprecated/typed/apps/v1:go_default_library",
        "//deprecated/typed/apps/v1/fake:go_default_library",
        "//deprecated/typed/apps/v1beta1:go_default_library",
        "//deprecated/typed/apps/v1beta1/fake:go_default_library",
        "//deprecated/typed/apps/v1beta2:go_default_library",
        "//deprecated/typed/apps/v1beta2/fake:go_default_library",
        "//deprecated/typed/auditregistration/v1alpha1:go_default_library",
        "//deprecated/typed/auditregistration/v1alpha1/fake:go_default_library",
        "//deprecated/typed/authentication/v1:go_default_library",
        "//deprecated/typed/authentication/v1/fake:go_default_library",
        "//deprecated/typed/authentication/v1beta1:go_default_library",
        "//deprecated/typed/authentication/v1beta1/fake:go_default_library",
        "//deprecated/typed/authorization/v1:go_default_library",
        "//deprecated/typed/authorization/v1/fake:go_default_library",
        "//deprecated/typed/authorization/v1beta1:go_default_library",
        "//deprecated/typed/authorization/v1beta1/fake:go_default_library",
        "//deprecated/typed/autoscaling/v1:go_default_library",
        "//deprecated/typed/autoscaling/v1/fake:go_default_library",
        "//deprecated/typed/autoscaling/v2beta1:go_default_library",
        "//deprecated/typed/autoscaling/v2beta1/fake:go_default_library",
        "//deprecated/typed/autoscaling/v2beta2:go_default_library",
        "//deprecated/typed/autoscaling/v2beta2/fake:go_default_library",
        "//deprecated/typed/batch/v1:go_default_library",
        "//deprecated/typed/batch/v1/fake:go_default_library",
        "//deprecated/typed/batch/v1beta1:go_default_library",
        "//deprecated/typed/batch/v1beta1/fake:go_default_library",
        "//deprecated/typed/batch/v2alpha1:go_default_library",
        "//deprecated/typed/batch/v2alpha1/fake:go_default_library",
        "//deprecated/typed/certificates/v1beta1:go_default_library",
        "//deprecated/typed/certificates/v1beta1/fake:go_default_library",
        "//deprecated/typed/coordination/v1:go_default_library",
        "//deprecated/typed/coordination/v1/fake:go_default_library",
        "//deprecated/typed/coordination/v1beta1:go_default_library",
        "//deprecated/typed/coordination/v1beta1/fake:go_default_library",
        "//deprecated/typed/core/v1:go_default_library",
        "//deprecated/typed/core/v1/fake:go_default_library",
        "//deprecated/typed/discovery/v1alpha1:go_default_library",
        "//deprecated/typed/discovery/v1alpha1/fake:go_default_library",
        "//deprecated/typed/discovery/v1beta1:go_default_library",
        "//deprecated/typed/discovery/v1beta1/fake:go_default_library",
        "//deprecated/typed/events/v1beta1:go_default_library",
        "//deprecated/typed/events/v1beta1/fake:go_default_library",
        "//deprecated/typed/extensions/v1beta1:go_default_library",
        "//deprecated/typed/extensions/v1beta1/fake:go_default_library",
        "//deprecated/typed/flowcontrol/v1alpha1:go_default_library",
        "//deprecated/typed/flowcontrol/v1alpha1/fake:go_default_library",
        "//deprecated/typed/networking/v1:go_default_library",
        "//deprecated/typed/networking/v1/fake:go_default_library",
        "//deprecated/typed/networking/v1beta1:go_default_library",
        "//deprecated/typed/networking/v1beta1/fake:go_default_library",
        "//deprecated/typed/node/v1alpha1:go_default_library",
        "//deprecated/typed/node/v1alpha1/fake:go_default_library",
        "//deprecated/typed/node/v1beta1:go_default_library",
        "//deprecated/typed/node/v1beta1/fake:go_default_library",
        "//deprecated/typed/policy/v1beta1:go_default_library",
        "//deprecated/typed/policy/v1beta1/fake:go_default_library",
        "//deprecated/typed/rbac/v1:go_default_library",
        "//deprecated/typed/rbac/v1/fake:go_default_library",
        "//deprecated/typed/rbac/v1alpha1:go_default_library",
        "//deprecated/typed/rbac/v1alpha1/fake:go_default_library",
        "//deprecated/typed/rbac/v1beta1:go_default_library",
        "//deprecated/typed/rbac/v1beta1/fake:go_default_library",
        "//deprecated/typed/scheduling/v1:go_default_library",
        "//deprecated/typed/scheduling/v1/fake:go_default_library",
        "//deprecated/typed/scheduling/v1alpha1:go_default_library",
        "//deprecated/typed/scheduling/v1alpha1/fake:go_default_library",
        "//deprecated/typed/scheduling/v1beta1:go_default_library",
        "//deprecated/typed/scheduling/v1beta1/fake:go_default_library",
        "//deprecated/typed/settings/v1alpha1:go_default_library",
        "//deprecated/typed/settings/v1alpha1/fake:go_default_library",
        "//deprecated/typed/storage/v1:go_default_library",
        "//deprecated/typed/storage/v1/fake:go_default_library",
        "//deprecated/typed/storage/v1alpha1:go_default_library",
        "//deprecated/typed/storage/v1alpha1/fake:go_default_library",
        "//deprecated/typed/storage/v1beta1:go_default_library",
        "//deprecated/typed/storage/v1beta1/fake:go_default_library",
        "//discovery:go_default_library",
        "//discovery/fake:go_default_library",
        "//testing:go_default_library",
        "@io_k8s_api//admissionregistration/v1:go_default_library",
        "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//authentication/v1:go_default_library",
        "@io_k8s_api//authentication/v1beta1:go_default_library",
        "@io_k8s_api//authorization/v1:go_default_library",
        "@io_k8s_api//authorization/v1beta1:go_default_library",
        "@io_k8s_api//autoscaling/v1:go_default_library",
        "@io_k8s_api//autoscaling/v2beta1:go_default_library",
        "@io_k8s_api//autoscaling/v2beta2:go_default_library",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//batch/v1beta1:go_default_library",
        "@io_k8s_api//batch/v2alpha1:go_default_library",
        "@io_k8s_api//certificates/v1beta1:go_default_library",
        "@io_k8s_api//coordination/v1:go_default_library",
        "@io_k8s_api//coordination/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1alpha1:go_default_library",
        "@io_k8s_api//discovery/v1beta1:go_default_library",
        "@io_k8s_api//events/v1beta1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_api//flowcontrol/v1alpha1:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_api//node/v1alpha1:go_default_library",
        "@io_k8s_api//node/v1beta1:go_default_library",
        "@io_k8s_api//policy/v1beta1:go_default_library",
        "@io_k8s_api//rbac/v1:go_default_library",
        "@io_k8s_api//rbac/v1alpha1:go_default_library",
        "@io_k8s_api//rbac/v1beta1:go_default_library",
        "@io_k8s_api//scheduling/v1:go_default_library",
        "@io_k8s_api//scheduling/v1alpha1:go_default_library",
        "@io_k8s_api//scheduling/v1beta1:go_default_library",
        "@io_k8s_api//settings/v1alpha1:go_default_library",
        "@io_k8s_api//storage/v1:go_default_library",
        "@io_k8s_api//storage/v1alpha1:go_default_library",
        "@io_k8s_api//storage/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
    ],
)
