load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["discovery.go"],
    importpath = "k8s.io/client-go/discovery/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/version:go_default_library",
        "//rest:go_default_library",
        "//testing:go_default_library",
        "@com_github_googleapis_gnostic//OpenAPIv2:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/version:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["discovery_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//kubernetes/fake:go_default_library",
        "@io_k8s_apimachinery//pkg/version:go_default_library",
    ],
)
