load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "informer.go",
        "interface.go",
    ],
    importpath = "k8s.io/client-go/dynamic/dynamicinformer",
    visibility = ["//visibility:public"],
    deps = [
        "//dynamic:go_default_library",
        "//dynamic/dynamiclister:go_default_library",
        "//informers:go_default_library",
        "//tools/cache:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["informer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//dynamic/fake:go_default_library",
        "//tools/cache:go_default_library",
        "@io_k8s_apimachinery//pkg/api/equality:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
    ],
)
