load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/client-go/examples/dynamic-create-update-delete-deployment",
    visibility = ["//visibility:private"],
    deps = [
        "//dynamic:go_default_library",
        "//tools/clientcmd:go_default_library",
        "//util/homedir:go_default_library",
        "//util/retry:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)

go_binary(
    name = "dynamic-create-update-delete-deployment",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
